Added 2 new svg's

--- a/scl-doubtology/udayagiri/templates/webpages/privacy.html
+++ b/scl-doubtology/udayagiri/templates/webpages/privacy.html
@@ -7,7 +7,7 @@
 
             <div class="container-fluid">
                 <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                    <h3 class="text-dark mb-0">Privacy</h3>
+                    <h3 class="text-dark mb-0">Data policy</h3>
                     </div>
 
      
@@ -17,16 +17,70 @@
 
                     <div class="col-lg-4 video-box align-self-baseline text-center" >
                         <img src="{% static 'webpages_static/privacy.svg' %}" class="img-fluid" alt="Sushiksha">
+                        <img src="{% static 'webpages_static/secure.svg' %}" class="img-fluid" alt="Sushiksha">
+                        <img src="{% static 'webpages_static/lock.svg' %}" class="img-fluid" alt="Sushiksha">
                     </div>
 
                     <div class="col-lg-8 pt-4 pt-lg-0 order-2 order-lg-1 content">
-                        <h3>Privacy Policy</h3>
+                        {% comment %} <h3>Data policy</h3> {% endcomment %}
                         <p>
-                            Sushiksha Mentoring Program is organized for scholars of Vishwa Konkani Student Scholarship Fund (VKSSF) by members of VKSSF Alumni Association (VAA). Sushiksha was started in 2018 by Royal Denzil Sequeira, a member of VAA since 2015, with 20 mentees. Since then Sushiksha has grown to be family of 170 mentees and 20 mentors. Mentees of Sushiksha are undergraduate scholars of VKSSF who are determined to thrive and be successful in their area of study and career. Mentors of Sushiksha Program are experienced professionals who were once the scholars of VKSSF and have lived through their own share of successes and failures but believe in empowering the scholars early on in their career path.</p>
-                        <p>
-                            Sushiksha thrives because of the dedication of its active mentees and mentors – who have contributed countless hours of work to shape their future and make it a highly productive and focused workspace.
+                This policy describes the information we process to support our application, the products and features offered by our application.
+                       <ol>
+                       <li>
+                       <strong>What kinds of information do we collect?</strong>
+                       <p>To provide the services we offer, we must process information about you. The types of information we collect depend on how you use our application.
+                        You can also access and delete the information we collect about you.
+                        Any general information and content you provide. We collect the content, communications and other information you provide when you use our application, 
+                        including when you sign up for an account, create or share content, and message or communicate with others. 
+                        We only collect basic information like first name, last name, email id and the optional display picture if added.
+                        The display picture is completely optional and there will be obligation regarding the same.
+                        We receive and analyze content, communications and information that other people provide when they use our Products.
                         </p>
+                        <strong>We do not collect any data regarding:</strong>
+                        <p>Information like device attributes,signals, data from device settings, network and connections, cookie data etc.
+                        Computers, phones, connected TVs and other web-connected devices you use that integrate with our Products, device location.
+                        It is to be noticed that personal details and bank account details will not be collected through any form under this application 
+                        and the owners of the application shall not be held liable for the same under any circumstances.<br>
+                        </p>
+                       </li>
+                        <li>
+                        <strong>How do we use this information?</strong>
+                        <ul>
+                        <li>
+                        <strong>Provide measurement, analytics, and other business services.</strong>
+                        <p>We use the information we have to help measure the effectiveness and distribution and understand the types of people who use our services and it's impact<br>
+</p>
+                        </li>
+                        <li>
+                        <strong>Promote safety, integrity and security.</strong>
+                        <p>We use the information we have to verify accounts and activity, combat harmful conduct, detect and prevent spam and other bad experiences, 
+maintain the integrity of our Products, and promote safety and security.<br>
+</p>
+                        </li>
+                        <li>
+                        <strong>Communicate with you.</strong>
+                        <p>We use the information we have to send you marketing communications, communicate with you about our Products, and let you know about our policies and terms. 
+We also use your information to respond to you when you contact us.<br>
+</p>
+                        </li>
+                        <li>
+                        <strong>Research and innovate for social good.</strong>
+                        <p>We use the information we have to conduct and support researchFor example, we learn about the requirement of the students and connect them to relevant lecturers.
+Therefore facilitating better learning which is the motive of the project.<br>
+</p>
+                        </li>
+                        </ul>
+                        </li>
 
+                       </ol>
+
+                       <p>If you have questions about this policy, you can contact us.<br>
+</p>
+<pre>Team Udayagiri
+House Takshashila
+Sushiksha 2019</pre>
+
+<strong><i>Date of Last Revision: 9th January, 2021</i></strong>
                     </div>
                 </div>
             </div>
