Links are updated

--- a/scl-doubtology/udayagiri/templates/auth_templates/register.html
+++ b/scl-doubtology/udayagiri/templates/auth_templates/register.html
@@ -30,8 +30,8 @@
                                 <hr><a class="btn btn-primary btn-block text-white btn-google btn-user" role="button"><i class="fab fa-google"></i>&nbsp; Register with Google</a><a class="btn btn-primary btn-block text-white btn-facebook btn-user" role="button"><i class="fab fa-facebook-f"></i>&nbsp; Register with Facebook</a>
                                 <hr>
                             </form>
-                            <div class="text-center"><a class="small" href="forgot-password.html">Forgot Password?</a></div>
-                            <div class="text-center"><a class="small" href="login.html">Already have an account? Login!</a></div>
+                            <div class="text-center"><a class="small" href="{% url 'forgot_password' %}">Forgot Password?</a></div>
+                            <div class="text-center"><a class="small" href="{% url 'login' %}">Already have an account? Login!</a></div>
                         </div>
                     </div>
                 </div>
