--- a/scl-doubtology/udayagiri/templates/auth_templates/forgot_password.html
+++ b/scl-doubtology/udayagiri/templates/auth_templates/forgot_password.html
@@ -23,8 +23,8 @@
                                         <div class="form-group"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address..." name="email"></div><button class="btn btn-primary btn-block text-white btn-user"
                                             type="submit">Reset Password</button></form>
                                     <div class="text-center">
-                                        <hr><a class="small" href="register.html">Create an Account!</a></div>
-                                    <div class="text-center"><a class="small" href="login.html">Already have an account? Login!</a></div>
+                                        <hr><a class="small" href="{% url 'register' %}">Create an Account!</a></div>
+                                    <div class="text-center"><a class="small" href="">Already have an account? Login!</a></div>
                                 </div>
                             </div>
                         </div>
