--- a/scl-doubtology/udayagiri/templates/auth_templates/login.html
+++ b/scl-doubtology/udayagiri/templates/auth_templates/login.html
@@ -29,8 +29,8 @@
                                         <hr><a class="btn btn-primary btn-block text-white btn-google btn-user" role="button"><i class="fab fa-google"></i>&nbsp; Login with Google</a><a class="btn btn-primary btn-block text-white btn-facebook btn-user" role="button"><i class="fab fa-facebook-f"></i>&nbsp; Login with Facebook</a>
                                         <hr>
                                     </form>
-                                    <div class="text-center"><a class="small" href="forgot-password.html">Forgot Password?</a></div>
-                                    <div class="text-center"><a class="small" href="register.html">Create an Account!</a></div>
+                                    <div class="text-center"><a class="small" href="{% url 'forgot_password' %}">Forgot Password?</a></div>
+                                    <div class="text-center"><a class="small" href="{% url 'register' %}">Create an Account!</a></div>
                                 </div>
                             </div>
                         </div>
