--- a/scl-doubtology/udayagiri/templates/teachers/teacher_detail.html
+++ b/scl-doubtology/udayagiri/templates/teachers/teacher_detail.html
@@ -163,10 +163,18 @@
 
           <div class="form-row">
             <div class="form-group col-md-4">
+            {% if user.is_authenticated %}
+{% else %}
+{% endif %}
               <input name="first_name" class="form-control" placeholder="First Name" required>
             </div>
             <div class="form-group col-md-4">
-              <input name="last_name" class="form-control" placeholder="Last Name">
+            {% if user.is_authenticated %}
+            <input name="last_name" class="form-control" value="{{user.last_name}}" placeholder="Last Name">
+{% else %}
+<input name="last_name" class="form-control" placeholder="Last Name">
+{% endif %}
+              
             </div>
             <div class="form-group col-md-4">
               {% if user.is_authenticated %}
