--- a/scl-doubtology/udayagiri/templates/webpages/team.html
+++ b/scl-doubtology/udayagiri/templates/webpages/team.html
@@ -44,12 +44,12 @@
                   <a href="https://twitter.com/PrajakthaP?s=08"><i class="fab fa-twitter"></i></a>
                   <a href=""><i class="fab fa-facebook-square"></i></a>
                   <a href=""><i class="fab fa-instagram"></i></a>
-                  <a href="https://www.linkedin.com/in/prathviraj-prabhu-430123193"><i class="fab fa-linkedin"></i></a>
+                  <a href=""><i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>Prajaktha P Prabhu</h4>
-                <span>VKSSF Batch : 2019</span>
+                <span>VKSSF Batch : 2019</span> https://www.linkedin.com/in/prajaktha-p-prabhu-a49b521b8
                 <span>Email: prajakthaprabhu@gmail.com</span>
               </div>
             </div>
