--- a/scl-doubtology/udayagiri/templates/teachers/teacher.html
+++ b/scl-doubtology/udayagiri/templates/teachers/teacher.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-
+{% load static %}
  <div class="d-flex flex-column" id="content-wrapper">
 
 {% include 'includes/search_bar.html' %}
@@ -12,6 +12,23 @@
     <!-- ======= Team Section ======= -->
     <section id="team" class="team section-bg">
       <div class="container">
+
+
+<div class="row">
+
+                    <div class="col-lg-4 video-box align-self-baseline text-center mb-5" >
+                        <img src="{% static 'webpages_static/teacher.svg' %}"  class="img-fluid" alt="Sushiksha">
+                    </div>
+
+                    <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
+                        <h3>Opt the right tutor!</h3>
+                        <br>
+                      <p class="lead">
+                      A good education can change anyone and a good teacher can change everything.
+                      </p>
+
+                    </div>
+                </div>
 
         <div class="row">
 
