--- a/scl-doubtology/udayagiri/templates/webpages/index.html
+++ b/scl-doubtology/udayagiri/templates/webpages/index.html
@@ -47,8 +47,8 @@
           <nav class="site-navigation position-relative text-right" role="navigation">
 
             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-              <li><a href="login.html" class="nav-link">Login</a></li>
-              <li><a href="SignUp.html" class="nav-link">SignUp</a></li>
+              <li><a href="{% url 'login' %}" class="nav-link">Login</a></li>
+              <li><a href="{% url 'register' %}" class="nav-link">SignUp</a></li>
             </ul>
           </nav>
         </div>
@@ -86,7 +86,7 @@
           <div class="row">
             <div class="col-lg-7 text-center text-lg-left">
               <h1 data-aos="fade-right">Journey towards Excellence!</h1>
-              <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="#" class="btn btn-outline-white">SignUp Today</a></p>
+              <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="{% url 'register' %}" class="btn btn-outline-white">SignUp Today</a></p>
             </div>
             <div class="col-lg-5 iphone-wrap">
               <img src="{% static 'landing_page_assests/img/phone_1.png' %}" alt="Image" class="phone-1" data-aos="fade-right">
@@ -187,16 +187,17 @@
   <footer class="footer" role="contentinfo">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 mb-4 mb-md-0">
-          <h3>About SoftLand</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius ea delectus pariatur, numquam aperiam
-            dolore nam optio dolorem facilis itaque voluptatum recusandae deleniti minus animi.</p>
-          <p class="social">
+        <div class="col-md-6 mb-4 mb-md-0">
+          <h3>About TutorVita</h3>
+          <p>With the outbreak of pandemic, the educational institutions had to be shutdown which hindered the learning of a lot of students.The students have to adapt to the online methods of learning which is now the new norm. 
+Reaching out to teachers and resource personals is a rather difficult task. With this project, any student from any corner of the world, willing to learn something can reachout to a teacher. 
+Anyone can create an account and seek help from our verified lecturers. </p>
+          {% comment %} <p class="social">
             <a href="#"><span class="icofont-twitter"></span></a>
             <a href="#"><span class="icofont-facebook"></span></a>
             <a href="#"><span class="icofont-dribbble"></span></a>
             <a href="#"><span class="icofont-behance"></span></a>
-          </p>
+          </p> {% endcomment %}
         </div>
        
       </div>
