--- a/scl-doubtology/udayagiri/templates/webpages/index.html
+++ b/scl-doubtology/udayagiri/templates/webpages/index.html
@@ -89,8 +89,8 @@
               <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="{% url 'register' %}" class="btn btn-outline-white">SignUp Today</a></p>
             </div>
             <div class="col-lg-5 iphone-wrap">
-              <img src="{% static 'landing_page_assests/img/phone_1.png' %}" alt="Image" class="phone-1" data-aos="fade-right">
-              <img src="{% static 'landing_page_assests/img/phone_2.png' %}" alt="Image" class="phone-1" data-aos="fade-right">
+              {% comment %} <img src="{% static 'landing_page_assests/img/phone_1.png' %}" alt="Image" class="phone-1" data-aos="fade-right">
+              <img src="{% static 'landing_page_assests/img/phone_2.png' %}" alt="Image" class="phone-1" data-aos="fade-right"> {% endcomment %}
             </div>
           </div>
         </div>
