--- a/scl-doubtology/udayagiri/udayagiri/static/landing_page_assests/css/style.css
+++ b/scl-doubtology/udayagiri/udayagiri/static/landing_page_assests/css/style.css
@@ -42,7 +42,7 @@ h1, h2, h3, h4, h5, h6, .font-heading {
 }
 
 .text-primary {
-  color: #2d71a1 !important;
+  color: #5737D6 !important;
 }
 
 .border-top {
@@ -70,7 +70,7 @@ section {
 .section-heading {
   font-size: 3rem;
   font-weight: 700;
-  background: linear-gradient(-45deg, #3db3c5, #274685);
+  background: linear-gradient(-45deg, #5737D6, #253898);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -79,7 +79,7 @@ section {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #2d71a1;
+  background: #5737D6;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -121,12 +121,12 @@ section {
 
 .btn.btn-outline-white:hover {
   background: #fff;
-  color: #2d71a1;
+  color: #5737D6;
 }
 
 .btn.btn-primary {
-  background: #2d71a1;
-  background: linear-gradient(-45deg, #1391a5, #274685);
+  background: #5737D6;
+  background: linear-gradient(-45deg, #1391a5, #253898);
   color: #fff;
   box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.15);
 }
@@ -143,7 +143,7 @@ section {
 }
 
 .feature-1 .wrap-icon.icon-1 {
-  background: linear-gradient(-45deg, #3b87bd, #2d71a2);
+  background: linear-gradient(-45deg, #5737D6,#253898);
 }
 
 .feature-1 .wrap-icon .icon {
@@ -171,7 +171,7 @@ section {
 }
 
 .step .number {
-  background: linear-gradient(-45deg, #1391a5, #274685);
+  background: linear-gradient(-45deg, #1391a5, #253898);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 700;
@@ -234,13 +234,13 @@ section {
 }
 
 .testimonial-carousel .owl-dots .owl-dot.active > span {
-  background: linear-gradient(-45deg, #1391a5, #274685);
+  background: linear-gradient(-45deg, #1391a5, #253898);
 }
 
 /* Pricing */
 .pricing {
   padding: 50px;
-  background: linear-gradient(-45deg, #1391a5, #274685);
+  background: linear-gradient(-45deg, #1391a5, #253898);
   color: #fff;
   padding-bottom: 12rem !important;
   position: relative;
@@ -251,7 +251,7 @@ section {
 }
 
 .pricing h3 {
-  color: #2d71a1;
+  color: #5737D6;
 }
 
 .pricing .price-cta {
@@ -293,14 +293,14 @@ section {
 }
 
 .pricing .btn-white:hover {
-  color: #2d71a1;
+  color: #5737D6;
 }
 
 .pricing.popular {
   background: #fff;
   box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.2);
   color: #000000;
-  background: linear-gradient(-45deg, #1391a5, #274685);
+  background: linear-gradient(-45deg, #1391a5, #253898);
   color: #fff;
   box-shadow: none;
 }
@@ -315,12 +315,12 @@ section {
 }
 
 .pricing.popular .btn-white {
-  border: 2px solid #2d71a1;
+  border: 2px solid #5737D6;
 }
 
 /* CTA Section */
 .cta-section {
-  background: linear-gradient(to right, #274685 0%, #3db3c5 100%);
+  background: linear-gradient(to right, #253898 0%, #5737D6 100%);
   color: #fff;
 }
 
@@ -388,11 +388,11 @@ section {
 }
 
 .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a:hover, .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a.active {
-  color: #2d71a1 !important;
+  color: #5737D6 !important;
 }
 
 .sticky-wrapper.is-sticky .site-navbar .site-menu > li.active a {
-  color: #2d71a1 !important;
+  color: #5737D6 !important;
 }
 
 .sticky-wrapper .shrink {
@@ -410,7 +410,7 @@ section {
 .form-control:active, .form-control:focus {
   outline: none;
   box-shadow: none;
-  border: 1px solid #2d71a1;
+  border: 1px solid #5737D6;
 }
 
 .php-email-form .validate {
@@ -504,11 +504,11 @@ section {
 
 .post-entry .post-text h3 a:hover {
   text-decoration: none;
-  color: #2d71a1;
+  color: #5737D6;
 }
 
 .post-entry .post-text .readmore {
-  color: #2d71a1;
+  color: #5737D6;
 }
 
 .sidebar-box {
@@ -647,7 +647,7 @@ section {
 # Hero Section
 --------------------------------------------------------------*/
 .hero-section {
-  background: linear-gradient(to right, rgba(39, 70, 133, 0.8) 0%, rgba(61, 179, 197, 0.8) 100%), url(../img/hero-bg.jpg);
+  background: linear-gradient(to right, #253898 0%, #5737D6 100%), url(../img/hero-bg.jpg);
   position: relative;
 }
 
@@ -812,7 +812,7 @@ section {
 }
 
 .site-navbar .site-navigation .site-menu > li > a:hover {
-  color: #2d71a1;
+  color: #5737D6;
 }
 
 .site-navbar .site-navigation .site-menu > li.active > a {
@@ -882,7 +882,7 @@ section {
 }
 
 .site-navbar .site-navigation .site-menu .has-children .dropdown .active {
-  color: #2d71a1 !important;
+  color: #5737D6 !important;
 }
 
 .site-navbar .site-navigation .site-menu .has-children .dropdown > li {
@@ -917,7 +917,7 @@ section {
 }
 
 .site-navbar .site-navigation .site-menu .has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children:focus > a, .site-navbar .site-navigation .site-menu .has-children:active > a {
-  color: #2d71a1;
+  color: #5737D6;
 }
 
 .site-navbar .site-navigation .site-menu .has-children:hover, .site-navbar .site-navigation .site-menu .has-children:focus, .site-navbar .site-navigation .site-menu .has-children:active {
@@ -1012,7 +1012,7 @@ section {
 }
 
 .site-mobile-menu .site-nav-wrap a:hover {
-  color: #2d71a1;
+  color: #5737D6;
 }
 
 .site-mobile-menu .site-nav-wrap li {
@@ -1021,7 +1021,7 @@ section {
 }
 
 .site-mobile-menu .site-nav-wrap li.active > a {
-  color: #2d71a1;
+  color: #5737D6;
 }
 
 .site-mobile-menu .site-nav-wrap .arrow-collapse {
@@ -1217,5 +1217,5 @@ section {
 
 .social a:hover {
   color: #fff;
-  background: #2d71a1;
+  background: #5737D6;
 }
