Custom scrollabar to landing page

--- a/scl-doubtology/udayagiri/templates/webpages/index.html
+++ b/scl-doubtology/udayagiri/templates/webpages/index.html
@@ -89,8 +89,8 @@
               <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="{% url 'register' %}" class="btn btn-outline-white">SignUp Today</a></p>
             </div>
             <div class="col-lg-5 iphone-wrap">
-              {% comment %} <img src="{% static 'landing_page_assests/img/phone_1.png' %}" alt="Image" class="phone-1" data-aos="fade-right">
-              <img src="{% static 'landing_page_assests/img/phone_2.png' %}" alt="Image" class="phone-1" data-aos="fade-right"> {% endcomment %}
+             <img src="{% static 'landing_page_assests/img/phone_1.png' %}" alt="Image" class="phone-1" data-aos="fade-right">
+              <img src="{% static 'landing_page_assests/img/phone_2.png' %}" alt="Image" class="phone-1" data-aos="fade-right"> 
             </div>
           </div>
         </div>
@@ -117,7 +117,7 @@
               <div class="wrap-icon icon-1">
                  <i class="icon fas fa-chalkboard-teacher"></i>
               </div>
-              <h3 class="mb-3">Meet our teachers</h3>
+              <h3 class="section-heading mb-3">Meet our teachers</h3>
             </div>
           </div>
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
@@ -125,7 +125,7 @@
               <div class="wrap-icon icon-1">
               <i class="icon fas fa-search"></i>
               </div>
-              <h3 class="mb-3">Search Field of Expertise</h3>
+              <h3 class="section-heading mb-3">Search Field of Expertise</h3>
             </div>
           </div>
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
@@ -133,7 +133,7 @@
               <div class="wrap-icon icon-1">
               <i class="icon fas fa-graduation-cap"></i>
               </div>
-              <h3 class="mb-3">Shape your Future</h3>
+              <h3 class="section-heading mb-3">Shape your Future</h3>
             </div>
           </div>
         </div>
@@ -154,14 +154,14 @@
           <div class="col-md-4" data-aos="fade-right">
             <div class="step">
               <span class="number">01</span>
-              <h3>Sign Up</h3>
+              <h3 class="section-title">Sign Up</h3>
               <p>Sign up to reachout to our professionally expertised and verified tutors</p>
             </div>
           </div>
           <div class="col-md-4" data-aos="fade-right">
             <div class="step">
               <span class="number">02</span>
-              <h3>Opt the Right Tutor</h3>
+              <h3 class="section-title">Opt the Right Tutor</h3>
               <p>A good education can change anyone and a good teacher can change everything
 </p>
             </div>
@@ -169,7 +169,7 @@
           <div class="col-md-4" data-aos="fade-right">
             <div class="step">
               <span class="number">03</span>
-              <h3>Happy Learning:)</h3>
+              <h3 class="section-title">Happy Learning:)</h3>
               <p>“Tell me and I forget, teach me and I may remember, involve me and I learn."
 </p>
             </div>
