--- a/scl-doubtology/udayagiri/templates/webpages/index.html
+++ b/scl-doubtology/udayagiri/templates/webpages/index.html
@@ -40,7 +40,7 @@
       <div class="row align-items-center">
 
         <div class="col-6 col-lg-2">
-          <h1 class="mb-0 site-logo"><a href="index.html" class="mb-0">TutorVita</a></h1>
+          <h1 class="mb-0 site-logo"><a href="/" class="mb-0">TutorVita</a></h1>
         </div>
 
         <div class="col-12 col-md-10 d-none d-lg-block">
