--- a/scl-doubtology/udayagiri/templates/includes/head.html
+++ b/scl-doubtology/udayagiri/templates/includes/head.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Udayagiri</title>
+    <title>TutorVita</title>
     <link rel="icon" href="{% static 'assets/img/logo/logo.png' %}">
     <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
