--- a/scl-doubtology/udayagiri/templates/includes/navbar.html
+++ b/scl-doubtology/udayagiri/templates/includes/navbar.html
@@ -3,7 +3,7 @@
             <div class="container-fluid d-flex flex-column p-0">
                 <a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
                     <div class="sidebar-brand-icon "><img src="{% static 'assets/img/logo/logo.png' %}" class="avatar" width="60px"></div>
-                    <div class="sidebar-brand-text mx-3"><span>UDAYAGIRI</span></div>
+                    <div class="sidebar-brand-text mx-3"><span>TutorVita</span></div>
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
