--- a/udayagiri/templates/webpages/index.html
+++ b/udayagiri/templates/webpages/index.html
@@ -39,9 +39,15 @@
     <div class="container">
       <div class="row align-items-center">
 
-        <div class="col-6 col-lg-2">
+       <div class="col-6 col-lg-2">
+       {% comment %} <img src="{% static 'assets/img/logo/logo.png' %}" class="img-fluid" width="60px"> {% endcomment %}
           <h1 class="mb-0 site-logo"><a href="/" class="mb-0">TutorVita</a></h1>
         </div>
+
+                {% comment %} <a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="">
+                    <div class="sidebar-brand-icon "><img src="{% static 'assets/img/logo/logo.png' %}" class="avatar" width="60px"></div>
+                    <div class="sidebar-brand-text mx-1"><span>TutorVita</span></div>
+                </a> {% endcomment %}
 
         <div class="col-12 col-md-10 d-none d-lg-block">
           <nav class="site-navigation position-relative text-right" role="navigation">
