Updated hero image

--- a/udayagiri/templates/webpages/index.html
+++ b/udayagiri/templates/webpages/index.html
@@ -94,10 +94,14 @@
               <h1 data-aos="fade-right">Journey towards Excellence!</h1>
               <p data-aos="fade-right" data-aos-delay="200" data-aos-offset="-500"><a href="{% url 'register' %}" class="btn btn-outline-white">SignUp Today</a></p>
             </div>
-            <div class="col-lg-5 iphone-wrap">
-             <img src="{% static 'landing_page_assests/img/phone_1.png' %}" alt="Image" class="phone-1" data-aos="fade-right">
+          <div class="col-xl-4 col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150">
+          <img src="{% static 'landing_page_assests/img/lap.png' %}" class="animated" alt="">
+        </div>
+
+            {% comment %} <div class="col-lg-5 iphone-wrap">
+             <img src="{% static 'landing_page_assests/img/lap.png' %}" alt="Image" class="phone-1" data-aos="fade-right">
               <img src="{% static 'landing_page_assests/img/phone_2.png' %}" alt="Image" class="phone-1" data-aos="fade-right"> 
-            </div>
+            </div> {% endcomment %}
           </div>
         </div>
       </div>
