--- a/udayagiri/templates/auth_templates/login.html
+++ b/udayagiri/templates/auth_templates/login.html
@@ -30,7 +30,7 @@
                                         <hr><a class="btn btn-primary btn-block text-white btn-google btn-user" href="{% provider_login_url 'google' method='oauth2' %}"  role="button"><i class="fab fa-google"></i>&nbsp; Login with Google</a><a class="btn btn-primary btn-block text-white btn-facebook btn-user" href="{% provider_login_url 'facebook' method='oauth2' %}" role="button"><i class="fab fa-facebook-f"></i>&nbsp; Login with Facebook</a>
                                         <hr>
                                     </form>
-                                    <div class="text-center"><a class="small" href="{% url 'forgot_password' %}">Forgot Password?</a></div>
+                                    {% comment %} <div class="text-center"><a class="small" href="{% url 'forgot_password' %}">Forgot Password?</a></div> {% endcomment %}
                                     <div class="text-center"><a class="small" href="{% url 'register' %}">Create an Account!</a></div>
                                 </div>
                             </div>
