--- a/templates/auth_templates/login.html
+++ b/templates/auth_templates/login.html
@@ -27,7 +27,8 @@
                                                 <div class="form-check"><input class="form-check-input custom-control-input" type="checkbox" id="formCheck-1"><label class="form-check-label custom-control-label" for="formCheck-1">Remember Me</label></div>
                                             </div>
                                         </div><button class="btn btn-primary btn-block text-white btn-user" type="submit">Login</button>
-                                        <hr><a class="btn btn-primary btn-block text-white btn-google btn-user" href="{% provider_login_url 'google' method='oauth2' %}"  role="button"><i class="fab fa-google"></i>&nbsp; Login with Google</a><a class="btn btn-primary btn-block text-white btn-facebook btn-user" href="{% provider_login_url 'facebook' method='oauth2' %}" role="button"><i class="fab fa-facebook-f"></i>&nbsp; Login with Facebook</a>
+                                        <hr><a class="btn btn-primary btn-block text-white btn-google btn-user" href="{% provider_login_url 'google' method='oauth2' %}"  role="button"><i class="fab fa-google"></i>&nbsp; Login with Google</a>
+                                        {% comment %} <a class="btn btn-primary btn-block text-white btn-facebook btn-user" href="{% provider_login_url 'facebook' method='oauth2' %}" role="button"><i class="fab fa-facebook-f"></i>&nbsp; Login with Facebook</a> {% endcomment %}
                                         <hr>
                                     </form>
                                     {% comment %} <div class="text-center"><a class="small" href="{% url 'forgot_password' %}">Forgot Password?</a></div> {% endcomment %}
