--- a/templates/auth_templates/register.html
+++ b/templates/auth_templates/register.html
@@ -28,7 +28,8 @@
                                     <div class="col-sm-6 mb-3 mb-sm-0"><input class="form-control form-control-user" type="password" id="examplePasswordInput" placeholder="Password" name="password" required=""></div>
                                     <div class="col-sm-6"><input class="form-control form-control-user" type="password" id="exampleRepeatPasswordInput" placeholder="Repeat Password" name="confirm_password" required=""></div>
                                 </div><button class="btn btn-primary btn-block text-white btn-user" type="submit">Register Account</button>
-                                 <hr><a class="btn btn-primary btn-block text-white btn-google btn-user" href="{% provider_login_url 'google' method='oauth2' %}"  role="button"><i class="fab fa-google"></i>&nbsp; Register with Google</a><a class="btn btn-primary btn-block text-white btn-facebook btn-user" href="{% provider_login_url 'facebook' method='oauth2' %}" role="button"><i class="fab fa-facebook-f"></i>&nbsp; Register with Facebook</a>
+                                 <hr><a class="btn btn-primary btn-block text-white btn-google btn-user" href="{% provider_login_url 'google' method='oauth2' %}"  role="button"><i class="fab fa-google"></i>&nbsp; Register with Google</a>
+                                 {% comment %} <a class="btn btn-primary btn-block text-white btn-facebook btn-user" href="{% provider_login_url 'facebook' method='oauth2' %}" role="button"><i class="fab fa-facebook-f"></i>&nbsp; Register with Facebook</a> {% endcomment %}
                                 <hr>
                             </form>
                             {% comment %} <div class="text-center"><a class="small" href="{% url 'forgot_password' %}">Forgot Password?</a></div> {% endcomment %}
