--- a/templates/teachers/teacher_detail.html
+++ b/templates/teachers/teacher_detail.html
@@ -166,15 +166,11 @@
             {% if user.is_authenticated %}
 {% else %}
 {% endif %}
-              <input name="first_name" class="form-control" placeholder="First Name" required>
+              <input name="first_name" class="form-control" value="{{user.first_name}}" placeholder="First Name" required>
             </div>
             <div class="form-group col-md-4">
-            {% if user.is_authenticated %}
+           
             <input name="last_name" class="form-control" value="{{user.last_name}}" placeholder="Last Name">
-{% else %}
-<input name="last_name" class="form-control" placeholder="Last Name">
-{% endif %}
-              
             </div>
             <div class="form-group col-md-4">
               {% if user.is_authenticated %}
